[gd_scene load_steps=14 format=2]

[ext_resource path="res://leechat/LEECHat.gd" type="Script" id=1]
[ext_resource path="res://fonts/5Computers-In-Love.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://shader/crt_material.tres" type="Material" id=3]
[ext_resource path="res://leechat/advertisements/Advertisement.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.0980392, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.427451, 0.231373, 1 )

[sub_resource type="Theme" id=3]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/ = SubResource( 2 )
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[node name="LEECHat" type="Control"]
visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 944.0
margin_bottom = 600.0
rect_min_size = Vector2( 864, 560 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chatLog" type="RichTextLabel" parent="boxContainer"]
margin_right = 864.0
margin_bottom = 500.0
rect_min_size = Vector2( 864, 500 )
theme = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "\"LEECH\" \"A new player has entered the chat!\""
text = "\"LEECH\" \"A new player has entered the chat!\""
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="boxContainer"]
margin_top = 516.0
margin_right = 864.0
margin_bottom = 538.0
custom_constants/separation = 16

[node name="playerName" type="Label" parent="boxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.00392157, 0.427451, 0.231373, 1 )
text = "you"
clip_text = true

[node name="writeLine" type="LineEdit" parent="boxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 816.0
margin_bottom = 22.0
rect_min_size = Vector2( 725, 0 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/cursor_color = Color( 0.00392157, 0.427451, 0.231373, 1 )
custom_colors/font_color = Color( 0.00392157, 0.427451, 0.231373, 1 )
max_length = 30
placeholder_text = "Type here, press enter to send. Escape to leave"
caret_blink = true

[node name="characterCount" type="Label" parent="boxContainer/HBoxContainer"]
margin_left = 832.0
margin_right = 832.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.00392157, 0.427451, 0.231373, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = ExtResource( 3 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advertisement" parent="." instance=ExtResource( 4 )]
[connection signal="text_changed" from="boxContainer/HBoxContainer/writeLine" to="." method="_on_writeLine_text_changed"]
